--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@azure/storage-blob": "^12.0.2",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "browser-sync": "^2.26.7",
